validator register
