# src/routes/blockchain.route.ts
@@ -4,7 +4,9 @@ import {
   getBlockByHash,
   getBlockByIndex,
   getLatestBlocks,
+  isValidatorRegistered,
   mineBlock,
+  registerValidator,
 } from "../controllers/blockchain.controller";
 
 const router = express.Router();
@@ -14,5 +16,7 @@ router.post("/mine", mineBlock);
 router.get("/all", getAllBlocks);
 router.get("/index/:index", getBlockByIndex);
 router.get("/hash/:hash", getBlockByHash);
+router.post("/register", registerValidator);
+router.get("/registered/:publicKey", isValidatorRegistered);
 
 export default router;
